# kinova_man_robot

./: README.md
kinova_man_app/: CMakeLists.txt  package.xml
kinova_man_app/script/: kinova_man_dance.py  kinova_man_get_angle.py
kinova_man_bringup/: CMakeLists.txt  package.xml
kinova_man_bringup/config/: robot_parameters.yaml
kinova_man_bringup/launch/: kinova_man_left.launch  kinova_man_right.launch
kinova_man_bringup/script/: pid_controller.py  pid_traj_action_server.py
kinova_man_description/: CMakeLists.txt  package.xml
kinova_man_description/launch/: display_kinova_robot.launch
kinova_man_description/meshes/: base_link.stl
kinova_man_description/urdf/: kinova_man_robot.urdf.xacro
kinova_man_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
kinova_man_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  kinova_man_robot.srdf  ompl_planning.yaml  ros_controllers.yaml
kinova_man_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  kinova_man_demo.launch  kinova_man_robot_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
